# suii_simulation

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/suii_simulation/rotating_table_plugin/: CMakeLists.txt  rotating_table_plugin.cc
include/suii_simulation/ur3_plugin/: CMakeLists.txt
launch/: base.launch  gazebo.launch  gripper.launch  navigation.launch  robocup_arena.launch  rotating_table.launch  tables.launch  test_world.launch
maps/: Test.yaml  robocup_amcl.pgm  robocup_amcl.yaml  robocup_obs.pgm  robocup_obs.yaml
src/: object_tf_publisher.py  rotating_table.py
urdf/: F20_20_B.urdf  F20_20_G.urdf  F40_40_B.urdf  F40_40_G.urdf  gripper.urdf  rotating_table.urdf  suii.urdf  suii_without_collision.urdf  table.urdf.xacro  wall.urdf.xacro
worlds/: test_world.world
